--- a/index.html
+++ b/index.html
@@ -583,12 +583,15 @@
 		</section>
 		<section class="nine_sc">
 			<div class="container">
-				<div class="nine_sc-title" data-aos="fade-up" data-aos-duration="1000" >
+				<div class="nine_sc-title" data-aos="fade-up" data-aos-duration="1000">
 					<img src="./images/textsvg/nine_sc-title.svg" alt="nine_sc-title" width="273.296" height="66.279"
 						class="mw100">
 				</div>
 				<div class="nine_sc-image" data-aos="fade" data-aos-duration="1000" data-aos-delay="700">
 					<img src="./images/nine_sc-img.jpg" alt="" width="335" height="560" class="w100">
+					<div class="nine_sc-label">
+						<img src="./images/nine_sc-label.svg" alt="nine_sc-label" width="187" height="238" class="mw100">
+					</div>
 				</div>
 				<button class="nine_sc-button" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="700">
 					<img src="./images/textsvg/nine_sc-button.svg" alt="nine_sc-button" width="128.232" height="33.847"
@@ -598,13 +601,13 @@
 		</section>
 		<footer class="footer">
 			<div class="container">
-				<div class="footer__title" data-aos="fade-left" data-aos-duration="1000" >
+				<div class="footer__title" data-aos="fade-left" data-aos-duration="1000">
 					<img src="./images/textsvg/footer__title.svg" alt="footer__title" width="155.442" height="140.694"
 						class="mw100">
 				</div>
 			</div>
-			<div class="copyright" >
-				<img src="./images/textsvg/copyright.svg" alt="copyright" width="169.771" height="13.658" class="mw100" >
+			<div class="copyright">
+				<img src="./images/textsvg/copyright.svg" alt="copyright" width="169.771" height="13.658" class="mw100">
 
 			</div>
 		</footer>
