fix third se text

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 						<div class="__body">
 							<div class="__body-title">
 								<img src="./images/textsvg/third/reason-1-body-title.svg" alt="reason-1-body-title"
-									width="264.365" height="18.359" class="w100">
+									width="264.365" height="18.359" class="mw100">
 
 							</div>
 							<div class="__body-image">
@@ -256,8 +256,8 @@
 						</div>
 						<div class="__body">
 							<div class="__body-title">
-								<img src="./images/textsvg/third/reason-2-body-title.svg" width="264.365"
-									height="18.359" alt="" class="w100">
+								<img src="./images/textsvg/third/reason-2-body-title.svg" width="204.092"
+									height="18.047" alt="" class="mw100">
 							</div>
 							<div class="__body-image">
 								<img src="./images/reason-2.svg" alt="" width="150" height="180" decoding="async">
@@ -276,7 +276,7 @@
 						<div class="__body">
 							<div class="__body-title">
 								<img src="./images/textsvg/third/reason-3-body-title.svg" alt="reason-3-body-title"
-									width="264.365" height="18.359" class="w100">
+									width="219.727" height="19.443"  class="mw100">
 							</div>
 							<div class="__body-image">
 								<img src="./images/reason-3.svg" alt="reason-3" width="150" height="180"
@@ -590,7 +590,8 @@
 				<div class="nine_sc-image" data-aos="fade" data-aos-duration="1000" data-aos-delay="700">
 					<img src="./images/nine_sc-img.jpg" alt="" width="335" height="560" class="w100">
 					<div class="nine_sc-label">
-						<img src="./images/nine_sc-label.svg" alt="nine_sc-label" width="187" height="238" class="mw100">
+						<img src="./images/nine_sc-label.svg" alt="nine_sc-label" width="187" height="238"
+							class="mw100">
 					</div>
 				</div>
 				<button class="nine_sc-button" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="700">
