--- a/index.html
+++ b/index.html
@@ -306,13 +306,10 @@
               data-aos-duration="1000"
               data-aos-delay="800"
             >
-              <img
-                src="./images/textsvg/second/second_sc-subtitle.svg"
-                width="277.675"
-                height="28.603"
-                alt="second_sc-subtitle"
-                class="mw100"
-              />
+              <span
+                >「店舗型性風俗特殊営業4号（ラブホテル等）での施術依頼は</span
+              >
+              <span> 規約で禁止しております。</span>
             </div>
           </div>
           <div class="second_sc-slider">
@@ -1305,6 +1302,5 @@
     <script src="./js/splide.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/scripts.js"></script>
-   
   </body>
 </html>
