--- a/index.html
+++ b/index.html
@@ -299,6 +299,22 @@
                   decoding="async"
                 />
               </div>
+              <div class="leftLeave">
+                <img
+                  src="/images/leftLeave.svg"
+                  width="24"
+                  height="61"
+                  alt=""
+                />
+              </div>
+              <div class="rightLeave">
+                <img
+                  src="/images/rightLeave.svg"
+                  width="30"
+                  height="66"
+                  alt=""
+                />
+              </div>
             </div>
             <div
               class="second_sc-subtitle"
@@ -306,10 +322,10 @@
               data-aos-duration="1000"
               data-aos-delay="800"
             >
-              <span
-                >「店舗型性風俗特殊営業4号（ラブホテル等）での施術依頼は</span
+              <p
+                >「店舗型性風俗特殊営業4号（ラブホテル等）での施術依頼は</p
               >
-              <span> 規約で禁止しております。</span>
+              <p> 規約で禁止しております。</p>
             </div>
           </div>
           <div class="second_sc-slider">
@@ -506,6 +522,22 @@
                 height="160"
                 class="w100"
               />
+              <div class="leftLeave">
+                <img
+                  src="/images/leftLeave.svg"
+                  width="24"
+                  height="61"
+                  alt=""
+                />
+              </div>
+              <div class="rightLeave">
+                <img
+                  src="/images/rightLeave.svg"
+                  width="30"
+                  height="66"
+                  alt=""
+                />
+              </div>
             </div>
             <div class="steps__list">
               <div
@@ -694,13 +726,9 @@
                 />
               </div>
               <div class="fifth_sc-subtitle">
-                <img
-                  src="./images/textsvg/fifth/fifth-subtitle.svg"
-                  alt="fifth-subtitle"
-                  width="291.361"
-                  height="79.865"
-                  class="mw100"
-                />
+                <span>すでに600名以上のセラピスト様が登録</span
+                ><span>自分らしい自由な働き方をスタートさせています。</span>
+                <span>（2022年1月時点）</span>
               </div>
             </div>
           </div>
@@ -1274,7 +1302,12 @@
               </div>
             </div>
             <div class="container">
-              <button class="nine_sc-button">
+              <button
+                class="nine_sc-button"
+                data-aos="fade-up"
+                data-aos-duration="400"
+                data-aos-delay="800se"
+              >
                 <small>まずは無料で</small>
                 <span>セラピスト登録する</span>
               </button>
