--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <ul class="smi__list">
                 <li
                   class="smi__item"
-                  data-aos="fade-left"
+                  data-aos="fade-up"
                   data-aos-duration="1000"
                   data-aos-delay="300"
                 >
@@ -222,7 +222,7 @@
                 </li>
                 <li
                   class="smi__item"
-                  data-aos="fade-left"
+                  data-aos="fade-up"
                   data-aos-duration="1000"
                   data-aos-delay="400"
                 >
@@ -230,7 +230,7 @@
                 </li>
                 <li
                   class="smi__item"
-                  data-aos="fade-left"
+                  data-aos="fade-up"
                   data-aos-duration="1000"
                   data-aos-delay="500"
                 >
@@ -238,7 +238,7 @@
                 </li>
                 <li
                   class="smi__item"
-                  data-aos="fade-left"
+                  data-aos="fade-up"
                   data-aos-duration="1000"
                   data-aos-delay="600"
                 >
@@ -246,7 +246,7 @@
                 </li>
                 <li
                   class="smi__item"
-                  data-aos="fade-left"
+                  data-aos="fade-up"
                   data-aos-duration="1000"
                   data-aos-delay="700"
                 >
@@ -254,7 +254,7 @@
                 </li>
                 <li
                   class="smi__item"
-                  data-aos="fade-left"
+                  data-aos="fade-up"
                   data-aos-duration="1000"
                   data-aos-delay="700"
                 >
@@ -292,7 +292,7 @@
               <span>少なくありません。</span>
               <div class="image">
                 <img
-                  src="/images/second-sc__frame-image.png"
+                  src="./images/second-sc__frame-image.png"
                   width="133"
                   height="192"
                   alt=""
@@ -301,7 +301,7 @@
               </div>
               <div class="leftLeave">
                 <img
-                  src="/images/leftLeave.svg"
+                  src="./images/leftLeave.svg"
                   width="24"
                   height="61"
                   alt=""
@@ -309,7 +309,7 @@
               </div>
               <div class="rightLeave">
                 <img
-                  src="/images/rightLeave.svg"
+                  src="./images/rightLeave.svg"
                   width="30"
                   height="66"
                   alt=""
@@ -322,10 +322,8 @@
               data-aos-duration="1000"
               data-aos-delay="800"
             >
-              <p
-                >「店舗型性風俗特殊営業4号（ラブホテル等）での施術依頼は</p
-              >
-              <p> 規約で禁止しております。</p>
+              <p>「店舗型性風俗特殊営業4号（ラブホテル等）での施術依頼は</p>
+              <p>規約で禁止しております。</p>
             </div>
           </div>
           <div class="second_sc-slider">
@@ -524,7 +522,7 @@
               />
               <div class="leftLeave">
                 <img
-                  src="/images/leftLeave.svg"
+                  src="./images/leftLeave.svg"
                   width="24"
                   height="61"
                   alt=""
@@ -532,7 +530,7 @@
               </div>
               <div class="rightLeave">
                 <img
-                  src="/images/rightLeave.svg"
+                  src="./images/rightLeave.svg"
                   width="30"
                   height="66"
                   alt=""
