--- a/index.html
+++ b/index.html
@@ -285,14 +285,13 @@
               data-aos-duration="1000"
               data-aos-delay="700"
             >
-              <span> 様々なセラピスト様がそれぞれ</span>
-              <span>自身のある施術を提供。</span>
-              <span>店舗を持たずフリーランス</span>
-              <span>として活動されている方も</span>
-              <span>少なくありません。</span>
+              CARELiNKの施術メニューは千差万別。<br />
+              ご自身の得意な施術内容やスキルに合わせてメ <br />
+              ニューや金額をご自身で決定していただけます。シス <br />
+              テム利用手数料は、決済金額の20〜25%です。
               <div class="image">
                 <img
-                  src="./images/second-sc__frame-image.png"
+                  src="./images/second-sc__frame-image.svg"
                   width="133"
                   height="192"
                   alt=""
@@ -322,8 +321,8 @@
               data-aos-duration="1000"
               data-aos-delay="800"
             >
-              <p>「店舗型性風俗特殊営業4号（ラブホテル等）での施術依頼は</p>
-              <p>規約で禁止しております。</p>
+              「店舗型性風俗特殊営業4号（ラブホテル等）での施術依頼は <br />
+              規約で禁止しております。
             </div>
           </div>
           <div class="second_sc-slider">
@@ -447,8 +446,10 @@
                         もみほぐし+オイル・・・・60min /13,000円
                       </li>
                     </ul>
-                    <span>※交通費や深夜料金も、自由に設定すること</span>
-                    <span>ができます。</span>
+                    <span
+                      >※交通費や深夜料金も、自由に設定すること <br />
+                      ができます。</span
+                    >
                   </div>
                 </div>
               </div>
@@ -471,10 +472,10 @@
                     />
                   </div>
                   <div class="__body-content">
-                    <span>登録はとても簡単。スマホがあればいつでもお仕事</span>
-                    <span>をスタートできます。</span>
-                    <span>無理に時間を確保する必要がなく、施術の依頼があ</span>
-                    <span>るまでご自身の時間を有効活用する事ができます</span>
+                    登録はとても簡単。スマホがあればいつでもお仕事 <br />
+                    をスタートできます。 <br />
+                    無理に時間を確保する必要がなく、施術の依頼があ <br />
+                    るまでご自身の時間を有効活用する事ができます <br />
                   </div>
                 </div>
               </div>
@@ -497,9 +498,9 @@
                     />
                   </div>
                   <div class="__body-content">
-                    <span>CARELiNKは施術後すぐに出金が可能です。</span>
-                    <span>カンタン操作で登録した銀行口座にすぐに着金する</span>
-                    <span>ので必要な時にすぐにお振り込みいただけます。</span>
+                    CARELiNKは施術後すぐに出金が可能です。<br />
+                    カンタン操作で登録した銀行口座にすぐに着金する<br />
+                    ので必要な時にすぐにお振り込みいただけます。<br />
                   </div>
                 </div>
               </div>
@@ -564,9 +565,9 @@
                   />
                 </div>
                 <div class="__content">
-                  <span>まずは3stepの簡単登録をしましょう！</span>
-                  <span>CARELiNKは登録時にLINEと連携する事で、</span>
-                  <span>予約や問い合わせがLINEに通知されます。</span>
+                  まずは3stepの簡単登録をしましょう！<br />
+                  CARELiNKは登録時にLINEと連携する事で、<br />
+                  予約や問い合わせがLINEに通知されます。<br />
                 </div>
               </div>
               <div
@@ -587,7 +588,7 @@
                 </div>
                 <div class="__image">
                   <img
-                    src="./images/step-2.png"
+                    src="./images/step-2.svg"
                     width="260"
                     height="254"
                     alt="step-2"
@@ -595,9 +596,9 @@
                   />
                 </div>
                 <div class="__content">
-                  <span>登録が完了したら、まずはプロフィールを充実させ</span>
-                  <span>ましょう。施術メニューや金額など、他のセラピス</span>
-                  <span>ト様も参考にしながら素敵なページを作りましょう。</span>
+                  登録が完了したら、まずはプロフィールを充実させ <br />
+                  ましょう。施術メニューや金額など、他のセラピス <br />
+                  ト様も参考にしながら素敵なページを作りましょう。 <br />
                 </div>
               </div>
               <div
@@ -618,7 +619,7 @@
                 </div>
                 <div class="__image">
                   <img
-                    src="./images/step-3.png"
+                    src="./images/step-3.svg"
                     width="230"
                     height="266"
                     alt="step-3"
@@ -626,9 +627,9 @@
                   />
                 </div>
                 <div class="__content">
-                  <span>プロフィールが充実したらいよいよお客様からの予</span>
-                  <span>約を獲得しましょう。シフト登録は予約獲得の為に</span>
-                  <span>マストです！こまめに登録しましょう。</span>
+                  プロフィールが充実したらいよいよお客様からの予 <br />
+                  約を獲得しましょう。シフト登録は予約獲得の為に <br />
+                  マストです！こまめに登録しましょう。 <br />
                 </div>
               </div>
               <div
@@ -649,7 +650,7 @@
                 </div>
                 <div class="__image">
                   <img
-                    src="./images/step-4.png"
+                    src="./images/step-4.svg"
                     width="308"
                     height="238"
                     alt="step-4"
@@ -657,11 +658,11 @@
                   />
                 </div>
                 <div class="__content">
-                  <span>お客様から予約が来たら、施術場所を確認の上、予</span>
-                  <span>約日時に施術を行いましょう。サイト内決済で金銭</span>
-                  <span>のトラブルは、心配無用。</span>
-                  <span>お客様の評価も事前に確認できるので、予約を承る</span>
-                  <span>かどうかの判断も可能です。</span>
+                  お客様から予約が来たら、施術場所を確認の上、予 <br />
+                  約日時に施術を行いましょう。サイト内決済で金銭 <br />
+                  のトラブルは、心配無用。 <br />
+                  お客様の評価も事前に確認できるので、予約を承る <br />
+                  かどうかの判断も可能です。 <br />
                 </div>
               </div>
               <div
@@ -682,7 +683,7 @@
                 </div>
                 <div class="__image">
                   <img
-                    src="./images/step-5.png"
+                    src="./images/step-5.svg"
                     width="278"
                     height="250"
                     alt="step-5"
@@ -690,9 +691,9 @@
                   />
                 </div>
                 <div class="__content">
-                  <span>CARELiNKでは施術終了後、システム利用手数料</span>
-                  <span>（決済金額の20〜25%）を差し引いた金額をすぐに</span>
-                  <span>出金する事が可能です。</span>
+                  CARELiNKでは施術終了後、システム利用手数料 <br />
+                  （決済金額の20〜25%）を差し引いた金額をすぐに <br />
+                  出金する事が可能です。 <br />
                 </div>
               </div>
             </div>
@@ -724,9 +725,9 @@
                 />
               </div>
               <div class="fifth_sc-subtitle">
-                <span>すでに600名以上のセラピスト様が登録</span
-                ><span>自分らしい自由な働き方をスタートさせています。</span>
-                <span>（2022年1月時点）</span>
+                すでに600名以上のセラピスト様が登録 <br />
+                自分らしい自由な働き方をスタートさせています。 <br />
+                <span>（2022年1月時点） </span>
               </div>
             </div>
           </div>
@@ -809,13 +810,8 @@
                   <span>ユーザーチェック機能</span>
                 </div>
                 <div class="__content">
-                  <span> CAERLiNKでは本人確認済のユーザーをアイコンに</span>
-                  <span>て表示し、さらに相互評価で事前にリピーターの傾</span>
-                  <span>向がわかる為、セラピスト様自身で施術予約を受け</span>
-                  <span>る受けないをご判断いただけます。</span>
-                  <span
-                    >予約を受け付けたくないユーザーをブロックする事も可能です。</span
-                  >
+                  CAERLiNKでは本人確認済のユーザーをアイコンにて表示し、さらに相互評価で事前にリピーターの傾向がわかる為、セラピスト様自身で施術予約を受ける受けないをご判断いただけます。<br />
+                  予約を受け付けたくないユーザーをブロックする事も可能です。
                 </div>
               </li>
               <li
@@ -994,13 +990,9 @@
                   <span>セラピスト様の安心の為に</span>
                 </div>
                 <div class="__content">
-                  <span>CARELiNKは一切の風俗行為を禁止しております。</span>
-                  <span>アプリ上での訴求は勿論、施術はプライベートな空</span>
-                  <span>間になる為、最善の仕様を常に模索しております。</span>
-                  <span>現在、施術タイマー上には110番直通のエマージェン</span>
-                  <span
-                    >シーボタンが採用され、視覚的にもユーザーへ予防を促進しています。</span
-                  >
+                  CARELiNKは一切の風俗行為を禁止しております。 <br>
+                  アプリ上での訴求は勿論、施術はプライベートな空間になる為、最善の仕様を常に模索しております。 <br>
+                  現在、施術タイマー上には110番直通のエマージェンシーボタンが採用され、視覚的にもユーザーへ予防を促進しています。 <br>
                 </div>
               </li>
             </ul>
@@ -1107,7 +1099,7 @@
                     <li class="splide__slide">
                       <div class="__image">
                         <img
-                          src="./images/slider2/slide1.png"
+                          src="./images/slider2/slide1.svg"
                           width="160"
                           height="160"
                           alt=""
@@ -1121,7 +1113,7 @@
                     <li class="splide__slide">
                       <div class="__image">
                         <img
-                          src="./images/slider2/slide2.png"
+                          src="./images/slider2/slide2.svg"
                           width="160"
                           height="160"
                           alt=""
@@ -1136,7 +1128,7 @@
                     <li class="splide__slide">
                       <div class="__image">
                         <img
-                          src="./images/slider2/slide3.png"
+                          src="./images/slider2/slide3.svg"
                           width="160"
                           height="160"
                           alt=""
@@ -1150,7 +1142,7 @@
                     <li class="splide__slide">
                       <div class="__image">
                         <img
-                          src="./images/slider2/slide4.png"
+                          src="./images/slider2/slide4.svg"
                           width="160"
                           height="160"
                           alt=""
@@ -1166,7 +1158,7 @@
                     <li class="splide__slide">
                       <div class="__image">
                         <img
-                          src="./images/slider2/slide5.png"
+                          src="./images/slider2/slide5.svg"
                           width="160"
                           height="160"
                           alt=""
