--- a/index.html
+++ b/index.html
@@ -285,10 +285,11 @@
               data-aos-duration="1000"
               data-aos-delay="700"
             >
-              CARELiNKの施術メニューは千差万別。<br />
-              ご自身の得意な施術内容やスキルに合わせてメ <br />
-              ニューや金額をご自身で決定していただけます。シス <br />
-              テム利用手数料は、決済金額の20〜25%です。
+            様々なセラピスト様がそれぞれ <br>
+            自身のある施術を提供。<br>
+            店舗を持たずフリーランス <br>
+            として活動されている方も
+            少なくありません。
               <div class="image">
                 <img
                   src="./images/second-sc__frame-image.svg"
