--- a/index.html
+++ b/index.html
@@ -428,10 +428,10 @@
                     />
                   </div>
                   <div class="__body-content">
-                    CARELiNKの施術メニューは千差万別。
+                    CARELiNKの施術メニューは千差万別。<br>
                     ご自身の得意な施術内容やスキルに合わせてメ
-                    ニューや金額をご自身で決定していただけます。シ
-                    ステム利用手数料は、決済金額の20〜25%です。
+                    ニューや金額をご自身で決定していただけます。シス
+                    テム利用手数料は、決済金額の20〜25%です。
                     <div class="list__title">（メニュー例）</div>
                     <ul class="list">
                       <li class="list__item">
@@ -558,7 +558,7 @@
                 </div>
                 <div class="__image">
                   <img
-                    src="./images/step-1.png"
+                    src="./images/step-1.svg"
                     width="230"
                     height="266"
                     alt="step-1"
@@ -1248,7 +1248,6 @@
                     <li>鍼灸を除く治療行為やその他医療行為</li>
                     <li>性的なサービスの要求や提供</li>
                   </ul>
-                  　
                 </div>
               </li>
             </ul>
